# rosweb

./: .dockerignore  .gitignore  .noserc  Dockerfile  LESSON.md  Makefile  README.md  Resources.md  docker-compose.yml
ros/: .env  .env.ci  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  bitbucket-pipelines.yml  docker-compose.yml  xquartzsetup.sh
ros/rosweb_bringup/: CMakeLists.txt  README.md  package.xml
ros/rosweb_bringup/launch/: rosweb_bringup.launch
ros/webserver/: CMakeLists.txt  README.md  package.xml
rosweb_bringup/launch/: rosweb_bringup.launch
web/: .env  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
web/simple/: index.html  styles.css
web/src/: styles.scss
web/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.ts  app.module.ts
web/src/app/core/services/: api.const.ts  api.interface.ts
web/src/app/core/services/api/: api.const.ts  api.interface.ts  api.service.ts
web/src/app/core/services/state/: app.store.ts  appState.interface.ts  appState.query.ts  appState.service.ts
web/src/app/modules/ros-controller/: ros-controller-routing.module.ts  ros-controller.component.html  ros-controller.component.scss  ros-controller.component.spec.ts  ros-controller.component.ts  ros-controller.module.ts
web/src/app/modules/ros-controller/pages/example/: example.page.html  example.page.scss  example.page.spec.ts  example.page.ts
web/src/app/modules/ros-controller/pages/home/: home.page.html  home.page.scss  home.page.ts
web/src/app/shared/: shared.module.ts
web/src/environments/: environment.prod.ts  environment.ts
